updated auth, bootstrap, client api, supabase payload, fixed cors middleware
